Added cover page and ToC listing the amount of books.

--- a/2023/Autorijden/Autorijden.tex
+++ b/2023/Autorijden/Autorijden.tex
@@ -253,7 +253,22 @@ Extreem belangrijk hoofdstuk voor het theorie-examen!
 \end{outline}
 
 \section{Voorrang}
-\todo{95-106}
+\begin{outline}
+\1 Manoeuvres: alle bewegingen op de baan die niet gewoon "rechtdoor blijven rijden" zijn.
+	\2 Van richting veranderen (draaien of achteruitrijden);
+	\2 Vanuit stilstand vertrekken;
+	\2 Van rijstrook wisselen.
+	
+\1 Manoeuvres hebben nooit voorrang, \emph{behalve}:
+	\2 Ritsende voertuigen op het punt waar ze niet anders kunnen dan invoegen.
+	\2 Wegrijdende bussen binnen de bebouwde kom.
+	
+\1 Bij links afslaan (waarbij de baan wordt gekruist):
+	\2 Links houden op de rijstrook;
+	\2 Bestuurders rechts laten voorgaan;
+	\2 Tegenliggers die rechtdoor rijden, voorbijrijden;
+	\2 Tegenliggers die gelijkaardig inslaan, laten voorgaan (zij moeten geen baan kruisen).
+\end{outline}
 
 \section{Kruisen en inhalen}
 \begin{outline}
@@ -269,6 +284,9 @@ Extreem belangrijk hoofdstuk voor het theorie-examen!
 \1 Belangrijke getallen:
 	\2 20 km/u: maximale snelheid in een woonerf (bord met een huis op een slee).
 	\2 30 km/u: maximale snelheid in een fietsstraat, landbouwstraat, en over een verkeersdrempel.
+	
+\newpage
+	
 	\2 Bebouwde kom:
 		\3 30 km/u: default maximale snelheid in de bebouwde kom in Brussel.
 		\3 50 km/u: default maximale snelheid in de bebouwde kom in Vlaanderen en Wallonië.
@@ -463,6 +481,7 @@ Extreem belangrijk hoofdstuk voor het theorie-examen!
 \end{outline}
 
 \section{Techniek}
+\vspace{-0.25em}
 \begin{outline}
 \1 Algemeen:
 	\2 Auto alleen servicen als hij koud is (maar niet bevroren).
@@ -501,6 +520,7 @@ Extreem belangrijk hoofdstuk voor het theorie-examen!
 
 \section{Defensief rijgedrag}
 \begin{outline}
+\vspace{-0.25em}
 \1 Defensief rijden (t.o.v.\ agressief) betekent:
 	\2 Zelf geen fouten maken;
 	\2 Fouten van anderen anticiperen, opmerken, en tolereren.
@@ -529,9 +549,7 @@ Extreem belangrijk hoofdstuk voor het theorie-examen!
 Verzameld op basis van \href{https://mijnrijbewijs.eu/}{deze website}.
 \begin{outline}
 \1 De bestuurder is niet verantwoordelijk voor de gordel van inzittenden.
-\1 Lichten:
-	\2 Grootlichten moeten worden gedoofd op 50m van een andere persoon.
-	\2 De kleuren en symbolen voor alle soorten licht.
+\1 De kleuren en symbolen voor alle soorten licht.
 \1 Boetes tellen ook als straf.
 \1 De alcohollimiet voor taxichauffeurs is niet 0.22/0.5 maar wel 0.09/0.2.
 \end{outline}
