Added several chapters to E1L, some polishing to SCP, and added a header.

--- a/2023/E1L/E1L.tex
+++ b/2023/E1L/E1L.tex
@@ -184,3 +184,93 @@
 \1 The real gain of foreign trade is not export, but import.
 	\2 You export to China because you want to receive their currency to then buy unique/more products from them than you could have bought with the same value in your own country.
 \end{outline}
+
+\section{}
+\section{}
+
+% Chapter 15
+\section{How the Price System Works}
+\begin{outline}
+\1 Explainer on the feedback loop of supply-and-demand:
+    \2 Demand rises $\Rightarrow$ short supply $\Rightarrow$ demanders outbid each other and price increases => profits increase $\Rightarrow$ more suppliers enter and existing suppliers expand $\Rightarrow$ surplus of supply $\Rightarrow$ no need to outbid $\Rightarrow$ price lowers $\Rightarrow$ profit decreases $\Rightarrow$ supply shrinks to the point where the least efficient supplier makes 0 profit (the least efficient cost of production equals the price)
+    \2 Demand falls $\Rightarrow$ surplus of supply. Repeat the above.
+\1 The fallacy in the chapter is that it is "evil" or "profit-obsessed" to cease supply for a product when pushed out by a surplus, even though people still need that product.
+    \2 "Crusoe economics": imagine a family on a deserted island. The division of labour changes constantly depending on needs: one day you might need to gather firewood, but you can't keep doing that for a month because there's no use for so much extra firewood whilst meanwhile you do need e.g. fish.
+    \2 When a supplier ceases production of one product, he isn't "abandoning the consumer" (he could still produce out of the goodness of his heart, "for the people", instead of for the profit), because he is switching to another product with better profit margins, which indicates higher demand, which means helping to relieve an even bigger need of the same consumers.
+... ?
+\end{outline}
+
+\section{}
+\section{}
+\section{}
+
+% Chapter 19
+\section{Minimum Wage Laws}
+\begin{outline}
+\1 First of all: labour is just another commodity. If you don't think you can create wealth by just raising the price of a product to a floor, you shouldn't believe that raising the floor on the price of labour (i.e. wages) creates wealth either.
+    \2 The difference with a product is that it's easier to force a minimum wage through government decree since employment is agreed through an explicit legally binding contract.
+\1 Henry says: the more people you try to raise the minimum wage more for, the worse the consequences get.
+    \2 In the event that somehow wages are below their worth, it's probably better to unionise.
+\1 Consequences of raising the minimum wage:
+    \2 People whose labour is worth (i.e. an employer can pay them this much in return for what theh produce without taking on unneeded loss) less than the minimum are now unemployable by law and become government-dependent.
+    \2 If the excess wages are passed down to the consumer, demand will decrease and hence employees in marginal suppliers will become unemployed. Demand increases since consumers:
+        \3 Consume less of the product
+        \3 Find substitutes for the product
+        \3 Find foreign imports for the product
+    \2 If prices are not passed down and costs go up, marginal producers still go out of business.
+    \2 "If the industry can't pay its workers a living wage, it shouldn't exist anyway."
+        \3 Those workers are then condemned to being laid off.
+        \3 The consumers lose the product.
+        \3 Assuming the workers exercised their free-market power by choosing the best available job to them, they are now forced into a less optimal alternative. Additionally, this causes more competition in those alternative industries which then threatens other people's jobs.
+\1 Interaction between minimum wage ($MW$) and unemployment benefits ($UB$): take all workers whose labour is worth $X < MW$. Then:
+    \2 If $UB > MW$ or $UB > X$, they won't work.
+    \2 If $UB < MW$ and $UB < X$, the following paradox applies:
+        \3 If $MW - UB$ is large, many workers fall in that gap. Assuming nobody will hire labour worth $X$ at more than $X$, these workers are not allowed to work due to the $MW$, and are forced on $UB$. So, they could have gained $X$ and society could have gained the $X$ equivalent of a product or service, yet now they only get $UB < X$ and society gets nothing in return.
+    \2 If $MW - UB$ is small, the workers are now asked whether an extra an extra $MW - UB$ of income is worth trading full-time of doing whatever they want for full-time of working for a boss.
+\1 Having the government invent projects for these people also isn't a good idea because it is wasteful.
+    \2 Henry would rather see workers employed at $X$ and have those tax dollars spent to subsidise $MW - X$.
+\1 "Monopoly companies can afford to pay sub-value wages."
+    \2 If it's a monopoly, it is the sole supplier of its product or (here) the sole applier of a certain worker skillset, such that workers "have no choice".
+    \2 But the workers already present entered the monopoly at some point, so at that time, the switch from another industry to the monopoly was attractive and hence the wages were not sub-value.
+    \2 If the company wants to grow, it also still has to offer competitive wages.
+    \2 The only time this monopoly can actually offer sub-value wages is when it is dying, and hence the monopoly will solve itself.
+\1 "Average wage has grown historically thanks to MW" is backwards. MW catches up to rising average wages.
+\1 The only way to properly raise wages is to raise production capacity. 
+    \2 You don't need MW policy. You need capitalism, innovation, education, ...
+\end{outline}
+
+\section{}
+\section{}
+
+% Chapter 22
+\section{The Function of Profits}
+\begin{outline}
+\1 Profit is capital that remains after costs of production, wages, debt and taxes, which can hence be spent freely without risk to current operations.
+\1 It is a misconception that company profits are huge.
+    \2 Most companies fail due to such lack of profit.
+    \2 Net profits only make up 5\% of national revenue, so let's assume this is also true for individual companies, which then average 5 cents they can freely spend for each dollar sold.
+\1 You could wonder: why do you need profits, rather than just breaking even?
+    \2 For making more profit: 
+        \3 One-time profits: marketing, buying machines and buildings, buying (shares of) other companies, paying off debt quicker, researching new products or higher quality or lower cost, ...
+        \3 Persistent profits: hiring more employees, lowering prices, ...
+    \2 For increased living standard of humans:
+        \3 One-time profits: dividends for shareholders, charity, ...
+        \3 Persistent profits: higher wages, ...
+\1 Profit as a reward is good because it rewards contribution to society:
+    \2 Highest demands are addressed first because that's where most profit is.
+    \2 Innovation and efficiency, because if there is no difference in quality between the products of two companies, they can't control the price, and hence if they want more profits, they are forced to decrease production costs.
+\end{outline}
+
+\section{}
+\section{}
+
+% Chapter 25
+\section{The Lesson Restated}
+\begin{outline}
+\1 Economic fallacies often come from midwits. Both dumb common sense and deep understanding lead to the realisation that they are fallacies.
+\1 It is in the interest of every producer to sell his good at the highest price possible while having everyone else sell their goods as cheaply as possible. 
+\1 "Wealth through scarcity" is clearly inferior to wealth through abundance. If all production in the economy where to increase by a factor X, and prices everywhere would simultaneously drop by a factor X, everyone would be earning less per unit produced but also paying less per unit consumed, but in contrast to mere deflation, the higher production means that everyone is consuming more and thus wealthier.
+\1 No change in the economy happens without harm somewhere.
+\1 In fact, supply is always self-effacing. If you can solve a need, the demand ceases and all your investment towards meeting the need becomes worthless. (This is even true ideologically: if you preach for a certain value to be adopted in society and people adopt it, then your preaching is no longer necessary.)
+\1 Distributed gains are harder to rally around than concentrated losses. A new machine makes a product cheaper for everyone in society, but throws a number of workers out.
+\end{outline}
