--- a/2024/SCF/SCF.tex
+++ b/2024/SCF/SCF.tex
@@ -19,7 +19,7 @@ Oral sex is real sex, not foreplay. There is no wrong way to have an orgasm. CL 
 \1 Some interesting facts:
 	\2 The clitoris has 18 parts.
 	\2 The majority of the nerve endings contributing to female orgasm are not inside the vagina but spread across the outside of the genitalia. Intercourse was never meant to make women orgasm because the clitoris lies too high.
-	\2 Women often need 15 minutes to become aroused enough to be able to orgasm.
+	\2 Women often need over 15 minutes to become aroused enough to be able to orgasm.
 \1 In a study where 98 married women kept a sex diary, it was reported that:
 	\2 The category of "very satisfying" was given to CL by 82\%, and to intercourse by 68\%, a 14\% gap.
 	\2 Orgasm happened 25\% of the intercourse sessions but 81\% for the CL sessions, a 56\% gap.
@@ -32,7 +32,7 @@ Oral sex is real sex, not foreplay. There is no wrong way to have an orgasm. CL 
 \begin{outline}
 \1 Male sexuality is quite unique in that it suffices to stimulate one body part. Women need touch in many places and need a mental connection.
 \1 The first orgasm of a session is the most difficult. Three ingredients: relaxation (by her), concentration, stimulation (by me).
-\1 In general, $<$30\% of women orgasm each session. With at least 21 minutes of foreplay, it jumps to $>$90\%.
+\1 Overall, $<$30\% of women orgasm each session. With $\geq$21 minutes of foreplay, it jumps to $>$90\%.
 \1 A man's orgasm is better when he is aroused for a while. What better way to kill time than to pleasure your woman?
 \end{outline}
 
@@ -86,7 +86,7 @@ Oral sex is real sex, not foreplay. There is no wrong way to have an orgasm. CL 
 \section{What's in a Name?}
 \begin{outline}
 \1 Yay, a diagram!
-\1 The external genitals of a woman (lips and even Venus mound) are collectively referred to as "vulva".
+\1 \emph{Vulva}: the external genitals of a woman (lips and even Venus mound) altogether.
 \end{outline}
 
 \section{Visible Female Sexual Anatomy}
@@ -120,7 +120,7 @@ Anatomy lessons (where else are you going to find HD close-ups of an aroused wom
 
 \section{Avoid G-spotty Logic}
 \begin{outline}
-\1 Between the urethra and the vagina is urethral sponge that is there to cushions the urethra against damage during sex.
+\1 Between the urethra and the vagina is urethral sponge that is there to cushion the urethra against damage during sex.
 \1 This is "the \emph{G-spot}". Some call it the "\emph{clitoral cluster}".
 \1 It's sensitive, but not that much. Responds best to "persistent massaging pressure" but she might pee because of it. It feels good because it's the closest you get to the clitoral head from the bottom.
 \end{outline}
@@ -136,7 +136,7 @@ Anatomy lessons (where else are you going to find HD close-ups of an aroused wom
 \1 The vagina lubricates itself by "sweating" across the entire wall.
 \1 There are also two glands, Bartholin's glands, that excrete a bit of very thick lubricant. It's unclear to me if these are parallel to the vagina (lubricating the vestibule) or perpendicular (lubricating the introitus).
 \1 During arousal, the vagina elongates and widens in the deeper 2/3.
-\1 And here we discover that the claim about "18 parts of the clitoris" is bullshit made up by feminist pagans, including pelvic floor muscles, the sponge beneath the taint, the labia minora... Those are not the clitoris.
+\1 And here we discover that the claim about "18 parts of the clitoris" is bullshit made up by feminist pagans, including pelvic floor muscles, the sponge beneath the taint, the labia minora... LMAO.
 \end{outline}
 
 \section{Aristotle and the Poetics of Arousal}
@@ -158,7 +158,7 @@ Anatomy lessons (where else are you going to find HD close-ups of an aroused wom
 \section{A Synopsis of Female Sexual Response}
 \begin{outline}
 \1 During foreplay:
-	\2 Blood rushes to the pelvic region, causing tissues to swell and fluid to push through the vaginal walls.
+	\2 Blood rushes to the pelvic region, so tissues swell and fluid pushes through the vaginal walls.
 	\2 Skin across the body becomes sensitive.
 	\2 Breasts swell and nipples become primed to release oxytocin when stimulated.
 	\2 The clitoral head might emerge.
@@ -180,7 +180,7 @@ Anatomy lessons (where else are you going to find HD close-ups of an aroused wom
 	\2 Uterus contracts due to oxytocin.
 	\2 Pelvic floor muscles (around the vagina and anus) contract ~6-10 times at 1/0.8 Hz.
 
-\1 After orgasm, males and females both can't tolerate more stimulation, but they differ in the timeframe:
+\1 After orgasm, males and females both can't tolerate more stimulation, but differ in the timeframe:
 	\2 Male: lose erection quickly (1-2 minutes), recover slowly (a day).
 	\2 Female: lose erection slowly (5-10 minutes), recover quickly (almost instantly).
 	\2 Women want to cuddle after orgasm due to the oxytocin, men want to go to sleep. If you can't hold off the sleep, do it while cuddling.
@@ -207,10 +207,10 @@ Anatomy lessons (where else are you going to find HD close-ups of an aroused wom
 One of the most self-owning chapters ever written. A summary of what is bad about it:
 \begin{outline}
 \1 Cites the 1953 Kinsey report. You do not want to cite the 1953 Kinsey report.
-\1 Calls it "boring" to have a societal standard that prefers oral sex to be reserved to committed relationships.
+\1 Calls a societal standard that prefers oral sex reserved to committed relationships "boring".
 \1 Frames it as problematic that "only 3\% of younger women who were still virgins reported ever receiving CL". Yeah, because they're virgins, stupid. Also, this book opens with "oral sex is real sex", so then those 3\% don't even count as virgins anymore according to your own definition.
 \1 Frames it as a success story that "twice as many women who went to college have given or received oral sex as compared to those who did not finish high school, and twice as many of those better-educated women had or received oral sex the last time they had sex". Please explain to me how loser jocks pumping and dumping girls on campus is a good thing.
-\1 In 1994, 84\% of women who viewed sex as recreational had oral sex in the last year, 74\% of women who maintained it should be part of a loving relationship, and 56\% of women who didn't believe in premarital sex. But... the study didn't control for marital status... so this says nothing about the sexual satisfaction of married traditional women.
+\1 Fractions of various groups of women in 1994 who had oral sex in the last year: of women who viewed sex as recreational, 84\%; of women who viewed it as confined to a loving relationship, 74\%; of women who didn't believe in premarital sex, 56\%. But... the study didn't control for marital status... so this is a failed jab at the sexual satisfaction of married traditional women.
 \1 Claims that the increase in CL prevalence is due to "young women becoming more confident and assertive in their demand for a level playing field". This is a stupid statement for many reasons:
 	\2 Demanding sexual acts doesn't make you confident nor assertive. It's weird. Many many married men never get blowjobs. Should we praise them for demanding a level playing field?
 	\2 Is it really a compliment to your society that women are increasingly becoming annoying, activist crusaders? Who is attracted to this? Whatever happened to having a loving relationship with healthy communication and reciprocity?
@@ -264,7 +264,7 @@ One of the most self-owning chapters ever written. A summary of what is bad abou
 \end{outline}
 
 
-\section*{PART 2}
+\bookpart{}
 \section{A Note on the Play Process}
 \begin{outline}
 \1 CL is not foreplay, because it is the best way to make a woman orgasm, and orgasming is the core of sex, not foreplay.
@@ -275,6 +275,7 @@ One of the most self-owning chapters ever written. A summary of what is bad abou
 	\item \emph{Moreplay}: you are free to give her a 2nd, 3rd, ... orgasm, and/or she gives you head and/or intercourse until you orgasm.
 \end{enumerate}
 \end{outline}
+
 
 \section{Foreplay}
 Here is a list of things to give you inspiration for foreplay.
@@ -321,13 +322,14 @@ Here is a list of things to give you inspiration for foreplay.
 \1 Lubricant: 20\% of women have trouble getting wet. For CL, saliva suffices. For fingering before CL, use a water-based lubricant. No oil-based and \textbf{DO NOT} use spermicide when your mouth will be near it.
 
 \1 Music: keep it low-key to get into a trance.
-Hand ties: if she has trouble surrendering, discuss tying her hands.
+
+\1 Hand ties: if she has trouble surrendering, suggest tying her hands.
 
 \1 Orgasm: if she already orgasms during foreplay (e.g.\ due to you fingering her, or her touching herself), \textbf{DO NOT} stimulate the vulva (especially the clitoral head) further for 5 to 10 minutes. Keep her warm and sexual by kissing and hugging instead.
 
 \1 Penetration: there are two ways to use an erection for foreplay.
 	\2 Grind between her labia, making contact with her clitoris;
-	\2 Put in "just the tip" (either in and out or just stationary) while gently massaging the clitoral head.
+	\2 Put in "just the tip" (in and out, or just stationary) while gently massaging the clitoral head.
 \end{outline}
 
 \section{Introducing Coreplay}
@@ -384,6 +386,8 @@ The 10 important parts respond well to:
 	\2 Brush her mons pubis with your fingers.
 	\2 Give soft kisses (just lips) on the inside of her legs, her underwear, and perhaps labia majora.
 
+\newpage
+
 \1 The first kiss is one long lick:
 \begin{enumerate}
 	\item Start at the fourchette and move up.
@@ -406,12 +410,12 @@ Consists of two supersets:
 	\2 Break contact momentarily to get a small stimulation reset.
 
 \1 Superset 2: 6 sets of
-	\2 5, then 6, then 7, then 8 ... half licks from bottom to mid-vagina that explicitly avoid the clitoral head. This will make it come out from under the hood. This is the goal you keep in mind.
+	\2 5, then 6, then 7, then 8 ... half licks from bottom to mid-vagina that explicitly avoid the clitoral head. The goal to keep in mind is that the head comes out from under the hood.
 	\2 1 full lick that stops on the clitoral head.
 	\2 5 seconds: soak the clitoral head to lubricate it and acclimate it to stimulation.
 
 \1 Extra advice:
-	\2 Keep this stage slow. It's a marathon, not a sprint. Don't meet passion with passion; keep control.
+	\2 Keep this stage slow. It's a marathon, not a sprint. \emph{Don't meet passion with passion}. Control.
 	\2 For the first superset, make sure you don't go so fast that one lick is still being enjoyed when the next one arrives.
 	\2 Grab her legs and let her push against your hands. You can gauge how aroused she is by the muscular tension, and pushing against your hands causes buildup that will be released on orgasm.
 \end{outline}
@@ -422,7 +426,7 @@ Consists of two supersets:
 \begin{enumerate}
 	\item Place non-dominant hand under her butt (see p. 141 for an image) so that you can pull her in with your fingers/palm.
 	\item While licking, tease the vulva by tracing one finger across the labia minora, the front commissure, the frenulum, the fourchette, and the base of the vagina.
-	\item While licking, insert the first two knuckles of your index finger into her vagina. Make sure you:
+	\item While licking, insert the first two knuckles of your index finger into her vagina. Ensure you:
 	\begin{itemize}
 		\item Hold straight and still. The goal is that she'll start contracting, not that you stimulate.
 		\item Don't insert more than one finger. She can't reach it too much.
@@ -436,6 +440,8 @@ Consists of two supersets:
 \1 How long should CL take? Until she orgasms.
 \1 On average, not counting foreplay, that's 15-45 minutes. Just reserve an hour.
 \end{outline}
+
+\newpage
 
 \section{Developing Tension, pt. 2}
 The following are some variations on normal tongue strokes:
@@ -453,7 +459,7 @@ The following are some variations on normal tongue strokes:
 \section{Escalating the Action, pt. 1}
 \begin{outline}
 \1 Left hand: pressed down on pubic bone.
-\1 Right hand: index finger inserted into the vagina so that when you straighten-bend-straighten-bend it ("come hither"), you're indenting the G-spot sponge. The base of your finger should press upwards.
+\1 Right hand: index finger inserted into the vagina so that when you straighten-bend-straighten-bend it ("come hither"), you're indenting the G-spot sponge. The base of your finger presses upwards.
 \1 Tongue: flat against clitoral head.
 \1 Finger should first do ceiling, then floor, then sides (staying close to the entrance).
 \1 Optional: give her a perineal pinch, i.e. pinch the fourchette.
