Added first chapters of OMGYES.

--- a/book-notes.tex
+++ b/book-notes.tex
@@ -130,4 +130,5 @@
 \input{./2023/E1L/E1L}
 \input{./2023/Autorijden/Autorijden}
 \input{./2024/SCF/SCF}
+\input{./2025/OMGYES/OMGYES}
 \end{document}
